show picture in carusel

--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -1,22 +1,21 @@
 .firstSlide{
-    visibility: hidden;
-    height: 30vh;
+    visibility: block;
+    height: 40vh;
     width: 200vh;
-    outline: dashed 1px black;
 }
 
 .secondSlide{
-    visibility: hidden;
-    height: 30vh;
+    visibility: block;
+    height: 40vh;
     width: 200vh;
 }
 
 .thirdSlide{
-    visibility: hidden;
-    height: 30vh;
-    width: 100vh;
+    visibility: block;
+    height: 40vh;
+    width: 200vh;
 }
 
 .carousel{
-    background-color:grey;
+    background-color:white;
 }
